Update TVMGUIListener.java